syntax = "proto3";

import "google/protobuf/empty.proto";
import "id.proto";

package heroes;

option java_package = "com.grigoryev.heroes";
option java_multiple_files = true;

message Hero {
  int64 id = 1;
  string name = 2;
  HeroType heroType = 3;
  HeroStatus heroStatus = 4;
  int32 level = 5;
  int32 health = 6;
}

enum HeroType {
  BEGGAR = 0;
  WARRIOR = 1;
  HUNTER = 2;
  MAGE = 3;
  PRIEST = 4;
  ROGUE = 5;
}

enum HeroStatus {
  INACTIVE = 0;
  EXPLORING = 1;
  FIGHTING = 2;
  RESTING = 3;
}

message SaveHeroRequest {
  string name = 2;
  HeroType heroType = 3;
  HeroStatus heroStatus = 4;
  int32 level = 5;
  int32 health = 6;
}

message DeleteResponse {
  string message = 1;
}

service HeroService {
  rpc findById(IdRequest) returns (Hero) {};
  rpc findAll(google.protobuf.Empty) returns (stream Hero) {};
  rpc findAllByIds(stream IdRequest) returns(stream Hero) {};
  rpc save(SaveHeroRequest) returns (Hero) {};
  rpc updateById(Hero) returns (Hero) {};
  rpc deleteById(IdRequest) returns (DeleteResponse) {};
}
